values/kyverno-policies.yml
customPolicies:
- apiVersion: kyverno.io/v1
  kind: ClusterPolicy
  metadata:
    name: mutate-istio-label
  spec:
    rules:
    - name: mutate-istio-label
      exclude:
        any:
        - resources:
            kinds:
            - Namespace
            names:
            - kube-system
      match:
        any:
        - resources:
            kinds:
              - Namespace
      mutate:
        mutateExistingOnPolicyUpdate: true
        targets:
          - apiVersion: v1
            kind: Namespace
            selector:
              matchExpressions:
                - key: kubernetes.io/metadata.name
                  operator: NotIn
                  values:
                    - kube-system
        patchStrategicMerge:
          metadata:
            labels:
              istio.io/dataplane-mode: ambient
policyExclude:
  disallow-capabilities:
    any:
    - resources:
        kinds:
        - Pod
        names:
        - cilium*
        - istio-cni-node-*
        - ztunnel-*
        namespaces:
        - istio-system
        - kube-system
  disallow-host-namespaces:
    any:
    - resources:
        kinds:
        - Pod
        names:
        - cilium*
        - etcd-*-control-plane
        - kube-apiserver-*-control-plane
        - kube-controller-manager-*-control-plane
        - kube-prometheus-stack-prometheus-node-exporter-*
        - kube-proxy-*
        - kube-scheduler-*-control-plane
        namespaces:
        - kube-system
        - monitoring
  disallow-host-path:
    any:
    - resources:
        kinds:
        - Pod
        names:
        - cilium*
        - etcd-*-control-plane
        - istio-cni-node-*
        - helper-pod-create-pvc-*
        - kube-apiserver-*-control-plane
        - kube-controller-manager-*-control-plane
        - kube-prometheus-stack-prometheus-node-exporter-*
        - kube-proxy-*
        - kube-scheduler-*-control-plane
        - opentelemetry-collector-agent-*
        - ztunnel-*
        namespaces:
        - istio-system
        - kube-system
        - local-path-storage
        - monitoring
  disallow-host-ports:
    any:
    - resources:
        kinds:
        - Pod
        names:
        - cilium*
        - etcd-*-control-plane
        - kube-apiserver-*-control-plane
        - kube-controller-manager-*-control-plane
        - kube-prometheus-stack-prometheus-node-exporter-*
        - kube-scheduler-*-control-plane
        - opentelemetry-collector-agent-*
        namespaces:
        - kube-system
        - monitoring
  disallow-privileged-containers:
    any:
    - resources:
        kinds:
        - Pod
        names:
        - cilium*
        - kube-proxy-*
        namespaces:
        - kube-system
  disallow-selinux:
    any:
    - resources:
        kinds:
        - Pod
        names:
        - cilium*
        namespaces:
        - kube-system
  restrict-apparmor-profiles:
    any:
    - resources:
        kinds:
        - Pod
        names:
        - istio-cni-node*
        namespaces:
        - istio-system
  restrict-seccomp:
    any:
    - resources:
        kinds:
        - Pod
        names:
        - cilium*
        namespaces:
        - kube-system
validationFailureAction: Enforce
